--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
                         <a href="#about" class="home__scroll-link"><i class='bx bx-up-arrow-alt' ></i>Scroll down</a>
                     </div>
 
-                    <img src="assets\img\billsanthony.png" alt="assets\img\billsanthony.png" class="home__img">
                 </div>
             </section>
             
@@ -56,12 +55,12 @@
 
     <div class="about__container bd-grid">
         <div class="about__img">
-            <img src="assets/img/tony.jpg" alt="assets/img/tony.jpg">
+
         </div>
 
         <div>
-            <h2 class="about__subtitle">I am Anthony Paul</h2>
-            <span class="about__profession">Web designer</span>
+            <h2 class="about__subtitle">I am umar ahmed (braintech)</h2>
+            <span class="about__profession">ICT EXPERT</span>
             <p class="about__text">A passionate web designer and back-end web developer. With a strong foundation in both front-end and back-end development, I bring a holistic approach to creating exceptional websites. I strive to strike the perfect balance between captivating design and seamless functionality.</p>
 
             <div class="about__social">
