--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
                 <div class="contact__container bd-grid">
                     <div class="contact__info">
                         <h3 class="contact__subtitle">EMAIL</h3>
-                        <span class="contact__text">anthonypaulakpan@udobatech.com</span>
+                        <span class="contact__text">umarahmadu@gmail.commspan>
 
                         <h3 class="contact__subtitle">PHONE</h3>
-                        <span class="contact__text">+234 8063465456</span>
+                        <span class="contact__text">+234 07066958052</span>
 
                         <h3 class="contact__subtitle">ADRESS</h3>
                         <span class="contact__text">Abuja</span>
@@ -189,8 +189,8 @@
         <footer class="footer section">
             <div class="footer__container bd-grid">
                 <div class="footer__data">
-                    <h2 class="footer__title">Anthony Paul</h2>
-                    <p class="footer__text">I'm Anthony Paul and this is my personal website</p>
+                    <h2 class="footer__title">Umar Ahmed</h2>
+                    <p class="footer__text">I'm Umar Ahmed and this is my personal website</p>
                 </div>
 
                 <div class="footer__data">
